welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:14: error: expected class or object definition
def faireV() {
^PictureMono2:32: error: expected class or object definition
def faireMotif() {
^PictureMono2:38: error: Unmatched closing brace '}' ignored here
}
^